--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
         "vue-router": "^3.0.2",
         "vue-snotify": "^3.2.1",
         "vuex": "^3.0.1"
+    },
+    "dependencies": {
+        "ajv": "^6.5.5",
+        "imagemin": "^5.0.0"
     }
 }
